# brain-eater

./: CMakeLists.txt  README.md  todo.txt
.cache/clangd/index/: main.cpp.09097D42B40F65DF.idx  player.h.2E308273C0C9EBBC.idx
include/: actor.h  civilization.h  civilization_map.h  door.h  enemy.h  entity.h  game.h  land_tile.h  player.h  tile.h
src/: CMakeLists.txt  actor.cpp  civilization_map.cpp  door.cpp  entity.cpp  game.cpp  main.cpp  tile.cpp
